# elastifund

./: .editorconfig  .env.example  .gitattributes  .gitignore  .replit  00_MISSION_AND_PRINCIPLES.md  01_EXECUTIVE_SUMMARY.md  02_ARCHITECTURE.md  03_METRICS_AND_LEADERBOARDS.md  04_TRADING_WORKERS.md  05_NON_TRADING_WORKERS.md  06_EXPERIMENT_DIARY.md  07_FORECASTS_AND_CHECKPOINTS.md  08_PROMPT_LIBRARY.md  09_GOVERNANCE_AND_SAFETY.md  10_OPERATIONS_RUNBOOK.md  11_PUBLIC_MESSAGING.md  12_MANAGED_SERVICE_BOUNDARY.md  AGENTS.md  AI_Prediction_Market_Fund_Investor_Report.docx  AutoregressionResearchPrompt.md  CLAUDE.md  CODEOWNERS  CODEX_CONSOLE_SPEC.md  CODEX_DISPATCH.md  CODEX_MASTER_PLAN.md  CODEX_PLANNING_PROMPT.md  COMMAND_NODE.md  COMMAND_NODE_v1.0.2.md  COMMAND_NODE_v1.1.0.md  CONTEXT_PACKAGE_MANIFEST.md  CONTRIBUTING.md  Calibration_Fix_Impact_Analysis.docx  Competitive_Landscape_Market_Analysis.docx  DCO.md  DEEP_RESEARCH_OUTPUT_v3.md  DEEP_RESEARCH_PROMPT.md  DEEP_RESEARCH_PROMPT_v1.md  DEEP_RESEARCH_PROMPT_v2.md  DEEP_RESEARCH_PROMPT_v4.md  (+110 more)
polymarket-bot/: .env.example  .env.live.template  .gitignore  CHANGELOG_EXECUTION_UPGRADE.md  Dockerfile  FILES_CREATED.md  FILES_SUMMARY.txt  HEALTH_REPORT_20260305.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  Makefile  OPS_README.md  QUICK_START.md  QUICK_TEST_REFERENCE.md  README.md  START_HERE.md  STRATEGY_REPORT.md  STRUCTURE.md  TESTING_GUIDE.md  TESTS_SUMMARY.md  TEST_FILES_INDEX.md  TEST_INVENTORY.txt  docker-compose.yml  pyproject.toml  smoke_metrics.json
polymarket-bot/ops/: deploy.sh  rollback.sh  smoke_test.sh  (+1 more)
(+2041 files in other folders)
